<resources>
    <string name="app_name">HulaApp</string>
    <string name="movie_logo">movie logo</string>
    <string name="hula">Hula</string>
    <string name="movie_cover_item">movie cover item</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="movie_cover_actionbar">movie cover actionbar</string>
    <string name="gradient_background">background gradient</string>
    <string name="original_title">Original Title</string>
    <string name="language">Language</string>
    <string name="release">Release</string>
    <string name="overview">Overview</string>
    <string name="bookmark_floating_button">bookmark floating button</string>
    <string name="bookmark_icon">bookmark icon</string>
    <string name="title_favorite">Module Title</string>
    <string name="rating">Rating</string>
    <string name="setting_icon">setting icon</string>
    <string name="success_to_remove_bookmark">Success to Remove Bookmark</string>
    <string name="success_to_bookmark">Success to Bookmark</string>
</resources>