<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:collapsedTitleTextColor="@color/white"
            app:contentScrim="@color/purple_500"
            app:expandedTitleTextAppearance="@style/ExpandedTitleTheme"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/movie_cover_actionbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/movie_cover_actionbar"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_collapseMode="parallax" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_bg"
                    android:contentDescription="@string/gradient_background" />

            </FrameLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/movie_detail" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                style="@style/TitleTheme2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/original_title" />

            <TextView
                android:id="@+id/movie_overview_original_title"
                style="@style/SubtitleTheme2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="lorem ipsum bla bla" />

            <TextView
                style="@style/TitleTheme2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/language" />

            <TextView
                android:id="@+id/movie_language_detail"
                style="@style/SubtitleTheme2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="en" />

            <TextView
                style="@style/TitleTheme2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/release" />

            <TextView
                android:id="@+id/movie_release_detail"
                style="@style/SubtitleTheme2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="04-12-2022" />

            <TextView
                style="@style/TitleTheme2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/rating" />

            <TextView
                android:id="@+id/movie_rating_detail"
                style="@style/SubtitleTheme2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="7.7" />

            <TextView
                style="@style/TitleTheme2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/movie_overview_detail"
                style="@style/SubtitleTheme2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="lorem ipsum bla bla" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bookmark_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/bookmark_floating_button"
        app:srcCompat="@drawable/ic_baseline_bookmark_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>